# MusicPlayer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  MusicPlayer.cpp  MusicPlayer.hpp
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  core.cpp  core.hpp
modules/fileSys/: CMakeLists.txt  fileSys.cpp  fileSys.hpp
